SubBt/force-app/main/default/objects/Warranty__c/fields/Create_Warranty_On_Project_Creation__c.field-meta.xml
<CustomField>
    <fullName>Create_Warranty_On_Project_Creation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Warranty On Project Creation</label>
    <type>Checkbox</type>
</CustomField>