SubBt/force-app/main/default/objects/Warranty__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <inlineHelpText>Date the Warranty is due.  When this date occurs the Warranty will lock and the customer will not be able to enter additional items.</inlineHelpText>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>