SubBt/force-app/main/default/objects/Warranty__c/fields/Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date__c</fullName>
    <inlineHelpText>Date the Warranty is visible to the customer.</inlineHelpText>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>