SubBt/force-app/main/default/objects/Warranty__c/fields/Lag_Value__c.field-meta.xml
<CustomField>
    <fullName>Lag_Value__c</fullName>
    <label>Lag Value</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>