SubBt/force-app/main/default/objects/Warranty__c/fields/Length_of_Warranty__c.field-meta.xml
<CustomField>
    <fullName>Length_of_Warranty__c</fullName>
    <label>Length of Warranty</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 month</fullName>
            </value>
            <value>
                <fullName>3 months</fullName>
            </value>
            <value>
                <fullName>6 months</fullName>
            </value>
            <value>
                <fullName>1 year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>