SubBt/force-app/main/default/objects/Warranty__c/fields/Locked__c.field-meta.xml
<CustomField>
    <fullName>Locked__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Allows the user to Lock the Warranty, preventing the customer from entering, editing items.</inlineHelpText>
    <label>Locked</label>
    <type>Checkbox</type>
</CustomField>