SubBt/force-app/main/default/objects/Warranty__c/fields/Parent_Warranty__c.field-meta.xml
<CustomField>
    <fullName>Parent_Warranty__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Warranty</label>
    <referenceTo>Warranty__c</referenceTo>
    <relationshipLabel>Warranty&apos;s (Previous Warranty)</relationshipLabel>
    <relationshipName>Warranty_s1</relationshipName>
    <type>Lookup</type>
</CustomField>