SubBt/force-app/main/default/objects/Warranty__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Project the Warranty is associated with.</inlineHelpText>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Warranty&apos;s</relationshipLabel>
    <relationshipName>Warranty_s</relationshipName>
    <type>Lookup</type>
</CustomField>