SubBt/force-app/main/default/objects/Warranty__c/fields/Warranty__c.field-meta.xml
<CustomField>
    <fullName>Warranty__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Next Warranty</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Project__c</field>
            <operation>equals</operation>
            <valueField>Warranty__c.Project__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Warranty__c</referenceTo>
    <relationshipLabel>Warranty&apos;s</relationshipLabel>
    <relationshipName>Warranty_s</relationshipName>
    <type>Lookup</type>
</CustomField>