SubBt/force-app/main/default/objects/Warranty__c/fields/Warranty_Number__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Number__c</fullName>
    <formula>Project__r.Auto_Number__c &amp;&apos;-&apos;&amp; Auto_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Warranty #</label>
    <type>Text</type>
</CustomField>