SubBt/force-app/main/default/objects/Warranty__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>Description__c</columns>
    <columns>Status__c</columns>
    <columns>Length_of_Warranty__c</columns>
    <columns>Effective_Date__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Instructions__c</columns>
    <columns>Warranty__c</columns>
    <columns>Warranty_Manager__c</columns>
    <columns>Create_Warranty_On_Project_Creation__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>